2000-07-25  Martin Baulig  <baulig@suse.de>

	* gnome-procbar.[ch]: Marked this as deprecated and moved
	it into the compat library.

2000-07-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi*.[ch]: "privatized" all structures. code cleanup.
	added necessary accessor functions for the now hidden members.
	fixed all the code to (hopefully) work with the above changes.
	* gnome-pouch.[ch]: likewise.
	* gnome-roo.[ch]: likewise.
	* gnome-pouchP.h: new file. contains private parts ;) of the
	GnomePouch and GnomeRoo widgets.
	* Makefile.am: added gnome-pouchP.h to libgnomeui_2_la_SOURCES.
	* mdi-demo.c: fixed to use the accessor functions instead of
	directly accessing the members.

Tue Jul 18 00:46:14 2000  George Lebl <jirka@5z.com>

	* gnome-gconf.c:  don't ref/sink, and use gconf_client_get_default
	  instead of _new

Mon Jul 17 23:49:58 2000  George Lebl <jirka@5z.com>

	* gnome-less.[ch]:  Port to the new text widget.  deprecate the font
	  functions and replace them with new ones which are 1) saner 2)
	  compatible with the new text widget.  Add a way to set width to
	  a specified amount of columns.  Derive the widget from HBox rather
	  then VBox to kill one level of wigetry.  Add append versions of all
	  the show functions.  Make the text widget pointers public.

2000-07-16  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-appbar.[ch] (gnome_appbar_get_status): new accessor function.
	* gnome-app-util.c (gnome_app_activate_statusbar): use
	gnome_appbar_get_status().
	
Fri Jul 14 17:10:54 2000  George Lebl <jirka@5z.com>

	* *.c: fixup the destroy/finalize handlers.  Make sure destroy
	  handlers can be called multiple times and move freeing of
	  private structure to finalize.  Also all unref stuff is supposed
	  to be in the destroy handler and not finalize according to gtk
	  docs.

	* gnome-icon-list.c: Make the typedefs standard and make the
	  private structure standard.

Fri Jul 14 05:39:40 2000  George Lebl <jirka@5z.com>
