@@ -54,7 +54,6 @@ typedef struct _GnomeEntryClass   GnomeEntryClass;
 
 struct _GnomeEntry {
 	GtkCombo combo;
-	gchar   *history_id;
 
 	/*< private >*/
 	GnomeEntryPrivate *_priv;
@@ -65,23 +64,34 @@ struct _GnomeEntryClass {
 };
 
 
-guint      gnome_entry_get_type        (void);
-GtkWidget *gnome_entry_new             (const gchar *history_id);
+guint        gnome_entry_get_type         (void);
+GtkWidget   *gnome_entry_new              (const gchar *history_id);
 
 /* for language bindings and subclassing, use gnome_entry_new */
-void	   gnome_entry_construct       (GnomeEntry *gentry, 
-					const gchar *history_id);
+void         gnome_entry_construct        (GnomeEntry  *gentry, 
+                                           const gchar *history_id);
 
-GtkWidget *gnome_entry_gtk_entry       (GnomeEntry *gentry);
-void       gnome_entry_set_history_id  (GnomeEntry *gentry, const gchar *history_id);
-void	   gnome_entry_set_max_saved   (GnomeEntry *gentry, guint max_saved);
-guint	   gnome_entry_get_max_saved   (GnomeEntry *gentry);
+GtkWidget   *gnome_entry_gtk_entry        (GnomeEntry  *gentry);
 
-void       gnome_entry_prepend_history (GnomeEntry *gentry, gboolean save, const gchar *text);
-void       gnome_entry_append_history  (GnomeEntry *gentry, gboolean save, const gchar *text);
-void       gnome_entry_load_history    (GnomeEntry *gentry);
-void       gnome_entry_save_history    (GnomeEntry *gentry);
-void       gnome_entry_clear_history   (GnomeEntry *gentry);
+const gchar *gnome_entry_get_history_id   (GnomeEntry  *gentry);
+
+void         gnome_entry_set_history_id   (GnomeEntry  *gentry,
+					   const gchar *history_id);
+const gchar *gnome_entry_get_history_id   (GnomeEntry  *gentry);
+
+void         gnome_entry_set_max_saved    (GnomeEntry  *gentry,
+					   guint        max_saved);
+guint        gnome_entry_get_max_saved    (GnomeEntry  *gentry);
+
+void         gnome_entry_prepend_history  (GnomeEntry  *gentry,
+					   gboolean    save,
+					   const gchar *text);
+void         gnome_entry_append_history   (GnomeEntry  *gentry,
+					   gboolean     save,
+					   const gchar *text);
+void         gnome_entry_load_history     (GnomeEntry  *gentry);
+void         gnome_entry_save_history     (GnomeEntry  *gentry);
+void         gnome_entry_clear_history    (GnomeEntry  *gentry);
 
 END_GNOME_DECLS
 
